# sp1-proof-aggregation

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: foundry-test.yml  prove.yml
aggregation/: Cargo.toml
aggregation/src/: main.rs
cache/: solidity-files-cache.json
contracts/: foundry.toml
contracts/deployments/: 31337.json
contracts/lib/sp1-contracts/contracts/script/deploy/v5.0.0/: SP1VerifierPlonk.s.sol
contracts/src/: VerifyPessimisticProof.sol
contracts/src/fixtures/: groth16-fixture.json
contracts/test/: Fibonacci.t.sol  VerifyPessimisticProof.sol
script/: Cargo.toml  build.rs
